Bug 372545. Misidentification of data tables in at-spi based on empty summary or caption. r=nian.liu